correction scrollbar swiper

--- a/newMVC/templates/Style/Accueil.css
+++ b/newMVC/templates/Style/Accueil.css
@@ -606,4 +606,8 @@ main #connexion input[type="submit"]:hover {
   top: 0;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 
